adaptació poms, i neteja mòduls